CMBSandbox4/src/objects/Monthly_Expenses__c.object
<CustomObject>
    <description>This will hold the results of an analytics snapshot.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_User__c</fullName>
        <label>Cost Per User</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Record_ID__c</fullName>
        <label>Expense Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Text__c</fullName>
        <label>Month Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Users__c</fullName>
        <label># Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Monthly Expense</label>
    <nameField>
        <label>Monthly Expenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>